--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,19 +1,18 @@
 <div class="modal__backdrop">
     <div class="modal__container">
-      <!-- Replace ::text:: with your code -->
         <div class="modal__title">
-            <div>::Title::</div>
+            <div>{{title}}</div>
             <div class="modal__icon">
-                <fa-icon [icon]="['fas','xmark']"></fa-icon>
+                <app-button iconName="xmark" (click)="sendResult()"></app-button>
             </div>
         </div>
-        <div class="modal__message">::Message::</div>
+        <div class="modal__message">{{message}}</div>
         <div class="modal__actions">
             <div class="modal__btn">
-                <app-button></app-button>
+                <app-button [buttonName]="okButtonText" (click)="sendResult('ok')"></app-button>
             </div>
             <div class="modal__btn">
-                <app-button></app-button>
+                <app-button [buttonName]="cancelButtonText" (click)="sendResult('cancel')"></app-button>
             </div>
         </div>
     </div>
