--- a/src/app/shared/components/registration-form/registration-form.component.scss
+++ b/src/app/shared/components/registration-form/registration-form.component.scss
@@ -1,9 +1,32 @@
 @import 'src/app/shared/styles/styles';
 
 .registration-form {
-  width: 260px;
   margin-top: 36px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
+}
+
+.form__control {
+  display: flex;
+  flex-direction: column;
+
+  input {
+    height: 50px;
+    width: 286px;
+    border: solid 1px #CFCFCF;
+    border-radius: 4px;
+
+    &.ng-invalid.ng-touched, &.ng-invalid.submitted {
+      border-color: red;
+    }
+  }
+
+  label {
+    font-weight: bold;
+  }
+}
+
+.alert {
+  color: red;
 }
