--- a/src/app/shared/components/course-form/course-form.component.html
+++ b/src/app/shared/components/course-form/course-form.component.html
@@ -1,6 +1,5 @@
-<!-- Replace ::text:: with your code -->
 <h2>Create / Edit Course</h2>
-<form>
+<form [formGroup]="courseForm">
   <div class="app-plate">
     <div class="course">
       <h3>Main Info</h3>
@@ -9,8 +8,16 @@
         <input
           type="text"
           id="title"
+          formControlName="title"
+          required
           placeholder="Input text"
+          [ngClass]="submitted ? 'submitted' : 'none'"
         />
+        <div *ngIf="title?.invalid && (title?.touched || submitted)" class="alert">
+          <div *ngIf="title?.errors?.['required']">
+            Title is required.
+          </div>
+        </div>
       </div>
       <div class="form__control">
         <label for="description">Description</label>
@@ -18,9 +25,17 @@
           id="description"
           name="description"
           placeholder="Input text"
+          formControlName="description"
+          required
+          [ngClass]="submitted ? 'submitted' : 'none'"
           rows="4"
           cols="5"
         ></textarea>
+        <div *ngIf="description?.invalid && (description?.touched || submitted)" class="alert">
+          <div *ngIf="description?.errors?.['required']">
+            Description is required.
+          </div>
+        </div>
       </div>
       <div class="separator"></div>
       <h3>Authors</h3>
@@ -29,9 +44,16 @@
           <input
             type="text"
             id="author"
+            formControlName="newAuthor"
+            [ngClass]="submitted ? 'submitted' : 'none'"
             placeholder="Input Author Name"
           />
-          <app-button></app-button>
+          <app-button buttonName="create author"></app-button>
+        </div>
+        <div *ngIf="newAuthor?.invalid && (newAuthor?.touched || submitted)" class="alert">
+          <div *ngIf="newAuthor?.errors?.['nameInvalid']">
+            Name format is incorrect.
+          </div>
         </div>
         <div class="course__authors">
           ::Authors::
@@ -44,15 +66,28 @@
           <input
             type="number"
             id="duration"
+            formControlName="duration"
+            required
+            [ngClass]="submitted ? 'submitted' : 'none'"
             placeholder="Input duration"
+            min="0"
           />
           <div class="course__duration">
             ::Duration::
           </div>
         </div>
+        <div *ngIf="duration?.invalid && (duration?.touched || submitted)" class="alert">
+          <div *ngIf="duration?.errors?.['required']">
+            Duration is required.
+          </div>
+          <div *ngIf="duration?.errors?.['min']">
+            Duration has to be more than 0.
+          </div>
+        </div>
       </div>
       <div class="form__action">
-        <app-button></app-button>
+        <app-button buttonName="cancel"></app-button>
+        <app-button buttonName="create course" (click)="onSubmit()"></app-button>
       </div>
     </div>
   </div>
