--- a/src/app/shared/components/course-form/course-form.component.scss
+++ b/src/app/shared/components/course-form/course-form.component.scss
@@ -5,7 +5,6 @@
 
   &__flex {
     display: flex;
-    justify-content: space-between;
     align-items: baseline;
 
     & input {
@@ -33,5 +32,15 @@
   &__icon {
     margin-left: 4px;
     cursor: pointer;
+  }
+}
+
+.form__action {
+  flex-direction: row;
+  display: flex;
+  justify-content: flex-end;
+
+  app-button {
+    margin-left: 15px;
   }
 }
