--- a/src/app/features/courses/courses.component.html
+++ b/src/app/features/courses/courses.component.html
@@ -4,6 +4,7 @@
         <app-button buttonName="logout"></app-button>
     </div>
 </app-header>
+<app-search placeholder="Input text" (searchResult)="print($event)"></app-search>
 <app-course-card *ngFor="let courseObj of courses" [isEditable]="areEditable" [course]="courseObj">
     <app-button iconName="trash-can"></app-button>
     <app-button iconName="pencil"></app-button>
