--- a/src/app/shared/components/course-card/course-card.component.html
+++ b/src/app/shared/components/course-card/course-card.component.html
@@ -9,8 +9,8 @@
               <b>Authors: </b>
               {{authors}}
             </div>
-            <div><b>Duration: </b>{{duration && (duration | fomattingMinutes)}}</div>
-            <div><b>Created: </b>{{creationDate | creationDate}}</div>
+            <div><b>Duration: </b>{{duration || 0 | fomattingMinutes}}</div>
+            <div><b>Created: </b>{{creationDate | creationDatePipe}}</div>
         </div>
         <div class="course-card__info-actions">
             <app-button buttonName="show course"></app-button>
