--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,4 +1,4 @@
 <div class="app-search">
-  <input type="text" placeholder="Input text">
-  <app-button></app-button>
+  <input type="text" [placeholder]="placeholder" [(ngModel)]="search">
+  <app-button buttonName="search" (click)="searchTerm()"></app-button>
 </div>
