[HW3] password toggle added

--- a/src/app/shared/components/login-form/login-form.component.scss
+++ b/src/app/shared/components/login-form/login-form.component.scss
@@ -10,3 +10,14 @@
 .form__text {
   width: 260px;
 }
+
+.eye_icon {
+  position: absolute;
+  top: 33%;
+  right: 5%;
+  color: grey;
+}
+
+.password_wrapper {
+  position: relative;
+}
