--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -25,15 +25,21 @@
       </div>
       <div class="form__control">
         <label for="password">Password</label>
-        <input
-          type="password"
-          id="password"
-          [(ngModel)]="model.password"
-          #password="ngModel"
-          placeholder="Input text"
-          required
-          [ngClass]="submitted ? 'submitted' : 'none'"
-        />
+        <div class="password_wrapper" [appPasswordToggle]="showPassword">
+          <input
+            type="password"
+            id="password"
+            [(ngModel)]="model.password"
+            #password="ngModel"
+            placeholder="Input text"
+            required
+            [ngClass]="submitted ? 'submitted' : 'none'"
+          />
+          <div class="eye_icon" (click)="toggleShowPassword()">
+            <fa-icon *ngIf="!showPassword" [icon]="['fas', 'eye']" />
+            <fa-icon *ngIf="showPassword" [icon]="['fas', 'eye-slash']" />
+          </div>
+        </div>
         <div *ngIf="password.invalid && (password.touched || submitted)" class="alert">
           <div *ngIf="password.errors?.['required']">
             Password is required.
