--- a/src/app/features/courses/courses.component.html
+++ b/src/app/features/courses/courses.component.html
@@ -1,18 +1,24 @@
 <app-header>
-    <div class="header">
+    <div class="header" *ngIf="username; else elseBlock">
         <div class="username">{{username}}</div>
         <app-button buttonName="logout"></app-button>
     </div>
+    <ng-template #elseBlock>
+        <div class="header">
+            <app-button buttonName="login" routerLink="/login"></app-button>
+        </div>
+    </ng-template>
 </app-header>
 <app-search placeholder="Input text" (searchResult)="print($event)"></app-search>
 <app-course-card *ngFor="let courseObj of courses" [isEditable]="areEditable" [course]="courseObj">
     <app-button iconName="trash-can"></app-button>
-    <app-button iconName="pencil"></app-button>
+    <app-button iconName="pencil" [routerLink]="['/courses/edit', courseObj.id]"></app-button>
 </app-course-card>
 <ng-container *ngIf="courses.length === 0">
     <app-info title="Your List Is Empty" text="Please use ’Add New Course’ button to add your first course">
-        <app-button buttonName="Add new course"></app-button>
+        <app-button buttonName="Add new course" routerLink="/courses/add"></app-button>
     </app-info>
 </ng-container>
 <app-button buttonName="show modal window" (click)="openModal(true)"></app-button>
 <app-modal *ngIf="showModal" (result)="print($event)" title="Message" message="Message Text" okButtonText="ok" cancelButtonText="close"></app-modal>
+<router-outlet></router-outlet>
