--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -52,8 +52,9 @@
         <app-button type="submit" buttonName="Submit" (click)="submit()"></app-button>
       </div>
       <div class="form__text">
-        If you don't have an account you may <strong>Registration</strong>
+        If you don't have an account you may <a routerLink="../registration">Registration</a>
       </div>
     </div>
   </div>
 </div>
+<router-outlet></router-outlet>
