--- a/src/app/shared/components/login-form/login-form.component.scss
+++ b/src/app/shared/components/login-form/login-form.component.scss
@@ -9,6 +9,12 @@
 
 .form__text {
   width: 260px;
+  
+  a{
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+  }
 }
 
 .eye_icon {
