--- a/src/app/shared/components/registration-form/registration-form.component.scss
+++ b/src/app/shared/components/registration-form/registration-form.component.scss
@@ -6,3 +6,9 @@
   flex-direction: column;
   align-items: center;
 }
+
+.form__text > a {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
