--- a/src/app/shared/components/registration-form/registration-form.component.html
+++ b/src/app/shared/components/registration-form/registration-form.component.html
@@ -60,7 +60,7 @@
         <app-button (click)="onSubmit()" buttonName="login"></app-button>
       </div>
       <div class="form__text">
-        If you have an account you may <a routerLink="../login">Login</a>
+        If you have an account you may <a [routerLink]="['..', 'login']">Login</a>
       </div>
     </form>
   </div>
